--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,10 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
-    testImplementation 'junit:junit:4.13'
+    testImplementation 'org.testng:testng:7.1.0'
+
 }
 
 test {
-    useJUnit()
+    useTestNG()
 }
